<resources>
    <string name="app_name">MyTPA</string>
    <string name="your_name">Your name</string>
    <string name="start_test">Start test !</string>
    <string name="less_than_40">less than 40</string>
    <string name="between_40_and_60">between 40 and 60</string>
    <string name="a_men">a men</string>
    <string name="more_than_60">more than 60</string>
    <string name="a_women">a women</string>
    <string name="next">Next</string>
    <string name="how_old_are_you">How old are you ?</string>
    <string name="you_are">You are :</string>
    <string name="userprofile">User Profile</string>
    <string name="no">No</string>
    <string name="have_you_a_pare_t_with_cardiac_problem">Have you a pare,t with cardiac problem?</string>
    <string name="are_you_diabetic">Are you diabetic?</string>
    <string name="maybe">Maybe</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="yes">Yes</string>
</resources>